<resources>
    <string name="app_name">Ambulance</string>
    <string name="username">Phone number or Email</string>
    <string name="pass">Enter your password</string>
    <string name="login_top_text">Enter Your Credentials !</string>
    <string name="home">Home</string>
    <string name="hospitals">Hospitals</string>
    <string name="chat_with_doctors">Chat With Doctors</string>
    <string name="profile">Profile</string>
    <string name="chat_with_doctors_button">Chat With Doc</string>
    <string name="hospitals_button">Hospitals</string>
    <string name="profile_button">Profile</string>
    <string name="home_button">Home</string>
    <string name="log_in">Log in</string>
    <string name="singIn">New User ?</string>
    <string name="hi">Hi there, navigate to those options</string>
    <string name="instruction_button">navigate through the buttons</string>
    <string name="bottom_line">For any type of Emergency Call - 9876543210 \n We are available 24x7</string>
    <string name="search_hospitals_text">Search for Hospitals</string>
    <string name="search_hospital_txt">Search for Hospitals here :</string>
    <string name="enter_hospital_hint">Enter hospital name</string>
    <string name="search_button_text">Search</string>
    <string name="all_list_txt">List of All</string>
    <string name="chat_txt">Chat</string>
    <string name="chat_doc_txt">List of Dotors Available to Chat</string>
    <string name="hope">We are here with you :)</string>
    <string name="search_doc">Search by Dr. Name</string>
    <string name="profile_text">Profile</string>
    <string name="invt_frnd_txt">Invite Friends</string>
    <string name="history_text">History</string>
    <string name="pay_meth_txt">Payment Methods</string>
    <string name="setngs_txt">Settings</string>
    <string name="help_text">Help</string>
</resources>